# cmake-template

./: .clang-tidy  .gitignore  BUILDING_8md.html  CMakeLists.txt  CMakePresets.json  CODE__OF__CONDUCT_8md.html  CONTRIBUTING_8md.html  HACKING_8md.html  README.md  README_8md.html  afterdoc_8h.html  afterdoc_8h_source.html  annotated.html  author_8cpp.html  autolink_8cpp.html  bug.html  classA-members.html  classA.html  classAfterdoc__Test-members.html  classAfterdoc__Test.html  classAutolink__Test-members.html  classAutolink__Test.html  classB-members.html  classB.html  classC-members.html  classC.html  classC1.html  classC2.html  classC3.html  classC4.html  classC5.html  classD-members.html  classD.html  classE-members.html  classE.html  classEnum__Test-members.html  classEnum__Test.html  classExample__Test-members.html  classExample__Test.html  classFn__Test-members.html  (+149 more)
.github/workflows/: ci.yml
cmake/: compile-options.cmake  docs.cmake  install.cmake
docs/: Doxyfile.in
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_f.js  enumvalues_3.js  files_1.js  files_2.js  files_4.js  files_7.js  functions_c.js  functions_e.js  pages_0.js  pages_2.js  pages_3.js  pages_4.js  pages_6.js  pages_9.js  pages_a.js  pages_b.js  pages_c.js  searchdata.js
src/: CMakeLists.txt  lib.cpp  lib.hpp  lib.test.cpp
tools/: sed.sh
